welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:22: error: class Array takes type parameters
def rempliTableau(T:Array):Array={
                           ^Array1:22: error: class Array takes type parameters
def rempliTableau(T:Array):Array={
                    ^Array1:22: error: class Array takes type parameters
def rempliTableau(T:Array):Array={
                    ^Array1:22: error: class Array takes type parameters
def rempliTableau(T:Array):Array={
                           ^Array1:23: error: not found: value taille
  for (i<-0 to (taille-1)){
                ^